# sue.tftpd

./: AUTHORS  COPYING  ChangeLog  NEWS  README  configure.in  mkinstalldirs
src/: Makefile.am  debug.h  globals.h  pkt_buff.c  pkt_buff.h  proto_tftp.c  proto_tftp.h  proto_udp.c  proto_udp.h  task.c  task.h  task_private.h  tftpd.c  tftpd.h  timer.c  timer.h  util.c  util.h
