dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/tftpd.c)
AM_INIT_AUTOMAKE(sue-tftpd, 1.0.6)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(socket strerror memcpy)
AC_CHECK_FUNC(getaddrinfo,
	[AC_DEFINE(HAVE_GETADDRINFO, 1,
		[Define if you have the 'getaddrinfo' function])],
	[AC_CHECK_FUNC(inet_pton,
		[AC_DEFINE(HAVE_INET_PTON, 1,
			[Define if you have the 'inet_pton' function])],
		[AC_CHECK_FUNC(inet_aton,
			[AC_DEFINE(HAVE_INET_ATON, 1,
				[Define if you have the 'inet_aton' function])],
			[AC_ERROR([inet functions are not found.])])])])

AC_CHECK_MEMBER([struct sockaddr.sa_len],
		[AC_DEFINE(HAVE_SA_LEN, 1,
			[Define if you have sa_len member in struct sockaddr])],
		,
		[#include <sys/socket.h>
		 #include <netinet/in.h>])

AC_CHECK_MEMBER([struct sockaddr_in6.sin6_addr],
		[AC_DEFINE(HAVE_SOCKADDR_IN6, 1,
			[Define if you have struct sockaddr_in6])],
		,
		[#include <sys/socket.h>
		 #include <netinet/in.h>])

AC_CHECK_MEMBER([struct in_pktinfo.ipi_addr],
		[AC_DEFINE(HAVE_IP_PKTINFO, 1,
			[Define if you have struct in_pktinfo])],
		,
		[#include <sys/socket.h>
		 #include <netinet/in.h>])

dnl Use -Wall -Werror if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall -Werror" ;;
  esac
fi
changequote([,])dnl

dnl Options
AC_ARG_ENABLE(debug, [  --enable-debug          enable debug output],
              [CFLAGS="$CFLAGS -g -DDEBUG"])

AC_ARG_WITH(threads, [  --with-pthreads         use pthreads instead of select() (not supported yet)],
            [AC_DEFINE(PTHREADS, 1, PTHREADS)])

AC_ARG_WITH(logfile, [  --with-logfile          specify log file (default: /var/log/tftpd.log)],
	    [AC_DEFINE(LOGFILE, "$withval", LOGFILE)],
            [AC_DEFINE(LOGFILE, "/var/log/tftpd.log", LOGFILE)])

AC_ARG_WITH(logfile, [  --with-pidfile          specify pid file (default: /var/run/tftpd.pid)],
	    [AC_DEFINE(PIDFILE, "$withval", PIDFILE)],
            [AC_DEFINE(PIDFILE, "/var/run/tftpd.pid", PIDFILE)])

AC_OUTPUT([
Makefile
src/Makefile
])
